// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`topbar-sticker For display only renders as expected 1`] = `
<div
  style={
    Object {
      "height": 3000,
    }
  }
>
  <div
    className="limiter py12 prose"
  >
    <p>
      Above the bar.
    </p>
  </div>
  <div
    className="sticky-outer-wrapper"
    style={Object {}}
  >
    <div
      className="sticky-inner-wrapper"
      style={
        Object {
          "position": "relative",
          "top": "0px",
          "zIndex": 4,
        }
      }
    >
      <div
        className="border-t border-b border--gray-light bg-white"
        data-swiftype-index="false"
      >
        <div
          className="limiter py12"
          style={
            Object {
              "minHeight": "50px",
            }
          }
        >
          <a
            className="mr18 link inline-block"
            href="#heading-2a"
          >
            Heading 2a
          </a>
          <a
            className="mr18 link inline-block"
            href="#heading-2b"
          >
            Heading 2b
          </a>
          <a
            className="mr18 link inline-block"
            href="#heading-3"
          >
            Heading 3
          </a>
          <a
            className="link inline-block"
            href="#heading-4"
          >
            Heading 4
          </a>
        </div>
      </div>
    </div>
  </div>
  <div
    className="limiter py12 prose"
  >
    <p>
      Below the bar, with lots of space to scroll.
    </p>
    <h2
      id="heading-2a"
    >
      Heading 2a
    </h2>
    <p>
      Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
    </p>
    <h2
      id="heading-2b"
    >
      Heading 2b
    </h2>
    <p>
      Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
    </p>
    <h3
      id="heading-3"
    >
      Heading 3
    </h3>
    <p>
      Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
    </p>
    <h4
      id="heading-4"
    >
      Heading 4
    </h4>
    <p>
      Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
    </p>
  </div>
</div>
`;

exports[`topbar-sticker Unsticks at 900px renders as expected 1`] = `
<div
  style={
    Object {
      "background": "blue",
      "height": 3000,
    }
  }
>
  <div
    className="px24 py12"
  >
    Above the bar.
  </div>
  <div
    className="sticky-outer-wrapper"
    style={Object {}}
  >
    <div
      className="sticky-inner-wrapper"
      style={
        Object {
          "position": "relative",
          "top": "0px",
          "zIndex": 4,
        }
      }
    >
      <div
        className="border-t border-b border--gray-light bg-white"
        data-swiftype-index="false"
      >
        <div
          className="px24 py12"
        >
          I'm going to unstick at 900px wide or less!
        </div>
      </div>
    </div>
  </div>
  <div
    className="px24 py12"
  >
    Below the bar, with lots of space to scroll.
  </div>
</div>
`;
